--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://snoopysnake.github.io/ahem/",
   "dependencies": {
     "gh-pages": "^2.1.1",
+    "pixi.js": "^5.2.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0"
